@@ -81,6 +81,10 @@ class Panel(GLIScreen.GLIScreen):
 		info_filesystem_label.set_alignment(0.0, 0.5)
 		self.info_filesystem = gtk.Label()
 		self.info_filesystem.set_alignment(0.0, 0.5)
+		info_mountpoint_label = gtk.Label(_("Mountpoint:"))
+		info_mountpoint_label.set_alignment(0.0, 0.5)
+		self.info_mountpoint = gtk.Label()
+		self.info_mountpoint.set_alignment(0.0, 0.5)
 		info_size_label = gtk.Label(_("Size:"))
 		info_size_label.set_alignment(0.0, 0.5)
 		self.info_size = gtk.Label()
@@ -91,6 +95,9 @@ class Panel(GLIScreen.GLIScreen):
 		part_info_table.attach(self.info_type, 1, 2, 1, 2)
 		part_info_table.attach(info_filesystem_label, 0, 1, 2, 3)
 		part_info_table.attach(self.info_filesystem, 1, 2, 2, 3)
+		part_info_table.attach(info_mountpoint_label, 0, 1, 3, 4)
+		part_info_table.attach(self.info_mountpoint, 1, 2, 3, 4)
+
 		part_info_table.attach(info_size_label, 0, 1, 5, 6)
 		part_info_table.attach(self.info_size, 1, 2, 5, 6)
 		self.part_info_box.pack_start(part_info_table, expand=False, fill=False)
@@ -161,7 +168,7 @@ class Panel(GLIScreen.GLIScreen):
 		self.info_partition.set_text("")
 		self.info_type.set_text("")
 		self.info_filesystem.set_text("")
-#		self.info_start.set_text("")
+		self.info_mountpoint.set_text("")
 #		self.info_end.set_text("")
 		self.info_size.set_text("")
 		self.part_info_box.hide_all()
@@ -185,6 +192,7 @@ class Panel(GLIScreen.GLIScreen):
 			self.info_filesystem.set_text(_("N/A"))
 		else:
 			self.info_filesystem.set_text(fstype)
+		self.info_mountpoint.set_text(tmppart.get_mountpoint() or "none")
 		start = tmppart.get_start()
 		end = tmppart.get_end()
 #		self.info_start.set_text(str(start))
