@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.184 2005/11/22 04:18:57 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.185 2005/11/26 00:37:14 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
+
+  25 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
+  show mountpoint in partition summary on main screen
 
   21 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   new paragraph on welcome screen
